--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ Thumbs.db
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
 .gradle
 build/
+appirater-android.iml
+app/app.iml
+atlassian-ide-plugin.xml
 
 #/gradle
 #
